2020-04-10  Charlie Zender  <zender@uci.edu>

	* nco_netcdf.c Add hint for possible explanation of NC_EACCESS (-77) due to old DAP server

	* ncap2 final patch for nco_gsl.c/h for when GSL not enabled

2020-04-08  Charlie Zender  <zender@uci.edu>

	* ncks alter nco_prn_att() to debug netCDF 4.7.4 changes in nc_inq_var_filter()

	* ncap2 incomplete patch nco_gsl.c/h for when GSL not enabled

2020-04-07  Charlie Zender  <zender@uci.edu>

	* ncclimo hgh_frq works for PRECT with ragged dates, non-integral years

	* ncrcat correctly rebase time values not stored in floating point

2020-04-06  Charlie Zender  <zender@uci.edu>

	* ncclimo add new clm_md='hf' type for high-frequency (hgh_frq) datasets

	* NCO 4.9.3-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.3-alpha05: Ozark';git push
	git tag -a 4.9.3-alpha05 -m 'ncrcat: quiet nfo; nco_gsl.c/h; ncremap kdtree parallel';git push --tags

2020-04-05  Charlie Zender  <zender@uci.edu>

	* nco_att_utl.c shift INFO/WARNING message from dbg_lvl == 0 to 1 to quiet annoying message

2020-04-03  Henry Butowsky  <henryb@hush.com>

	* Turn nco_gsl_fit_linear(), nco_gsl_stats_mean(), nco_gsl_stats_covariance() in nco_gsl.c/h into stubs to comply with separation of GSL GPL code and NCO BSD code

2020-04-02  Charlie Zender  <zender@uci.edu>

	* Fix typo in ncclimo HINT reported by Sterling

	* Merge Henry's modifications to parallelize kdtree

2020-03-31  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.3-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.3-alpha04: Quarrantine';git push
	git tag -a 4.9.3-alpha04 -m 'ncrcat: rbs nc_int rgr tst ncremap/ncks: pg2 all work;';git push --tags

	* ncremap: curvilinear regional NCO grids that worked with ESMF	now work with NCO weight generator

2020-03-21  Charlie Zender  <zender@uci.edu>

	* Quiet HINT on -C -x -v crd combination per user request

2020-03-17  Charlie Zender  <zender@uci.edu>
