@@ -125,8 +125,8 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @setfilename nco.info
 
 @c Define edition, date, ...
-@set nco-edition 4.9.3-alpha05
-@set doc-edition 4.9.3-alpha05
+@set nco-edition 4.9.3-alpha06
+@set doc-edition 4.9.3-alpha06
 @set copyright-years 1995--2020
 @set update-year 2020
 @set update-date 14 April 2020
